prod_snapshot_2015-09-24_1030/objects/DealChicken_Project__c.object
<CustomObject>
    <fields>
        <fullName>Build_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Builder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DC_PMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Link__c</fullName>
        <label>DC Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handler</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DC_PMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Market_Handler_Builder_Marketer__c</fullName>
        <formula>Project_Lead__r.FirstName + &quot;, &quot; +    Orig_Market__r.Name   + &quot;, &quot; + Handler__r.FirstName + &quot;, &quot; +  Builder__r.FirstName + &quot;, &quot; +  Marketer__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead-Market-Handler-Builder-Marketer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQ_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQ Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DC_PMs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merch_Opp__c</fullName>
        <label>Merch/Opp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>DC_PMs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Orig_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orig Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>DealChicken Projects</relationshipLabel>
        <relationshipName>DC_PMs_OM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DealChicken_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proof_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_Status__c</fullName>
        <label>Proof Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>DealChicken Project</label>
    <listViews>
        <fullName>AllTeams</fullName>
        <columns>NAME</columns>
        <columns>Lead_Market_Handler_Builder_Marketer__c</columns>
        <columns>Merch_Opp__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>MQ_Sent__c</columns>
        <columns>Content__c</columns>
        <columns>Proof_Approved__c</columns>
        <columns>Marketing__c</columns>
        <columns>Build_Complete__c</columns>
        <columns>Proof_Status__c</columns>
        <columns>FollowUp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Teams</label>
    </listViews>
    <listViews>
        <fullName>MikesTeam</fullName>
        <columns>NAME</columns>
        <columns>Lead_Market_Handler_Builder_Marketer__c</columns>
        <columns>Merch_Opp__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>MQ_Sent__c</columns>
        <columns>Content__c</columns>
        <columns>Proof_Approved__c</columns>
        <columns>Marketing__c</columns>
        <columns>Build_Complete__c</columns>
        <columns>Proof_Status__c</columns>
        <columns>FollowUp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Lead__c</field>
            <operation>equals</operation>
            <value>Michael McCormick</value>
        </filters>
        <label>Mike&apos;s Team</label>
    </listViews>
    <nameField>
        <displayFormat>DCPM-{00000000}</displayFormat>
        <label>DCP Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DealChicken Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>